# opencl_matrix_multiply

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: entry.cc  matrix_multiply.cl
src/Classes/: CLBuffer.cc  CLBuffer.hh  CLContext.cc  CLContext.hh  CLKernel.cc  CLKernel.hh
src/Utils/: EigenBenchmark.cc  EigenBenchmark.hh  FileHandler.cc  FileHandler.hh  Timer.cc  Timer.hh
